# SplitBot_streamlit

./: pyproject.toml
src/splitbot_streamlit/: app.py
