[tool.poetry]
name = "splitbot-streamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.3.0"
numpy = "1.26.4"
streamlit = "^1.37.1"
transformers = "^4.43.4"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
